spacing problem solved

--- a/index.css
+++ b/index.css
@@ -2,6 +2,8 @@
     font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
     line-height: 1.5;
     font-weight: 400;
+    letter-spacing: 0.02em; 
+    word-spacing: 0.05em;
 
     color-scheme: light dark;
     color: white;
